# FinTool_Analyst

./: .gitignore  README.md  financial_agent_walkthrough.ipynb  main.py  pyproject.toml
helper_modules/: agent_coordinator.py  document_tools.py  function_tools.py
tests/: test_function_tools.py  test_vocareum_setup_for_llama_index.py
