[project]
name = "fintool-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index>=0.10.0",
    "llama-index-embeddings-openai>=0.1.0",
    "llama-index-llms-openai>=0.1.0",
    "numpy>=1.24.3",
    "openai>=1.6.1",
    "pandas>=2.1.4",
    "pytest>=9.0.2",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
